[project]
name = "ai-dataanalyst2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
     "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-ollama>=0.3.10",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
]
